--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.0",
+    "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
